# 002_web_scraper

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.bat
docs/: README.md
src/: __init__.py  display.py  main.py  models.py  scraper.py  utils.py
tests/: test_main.py
